@@ -1,0 +1,9 @@
+#!/bin/bash
+
+export MRNAPP_HOME=@sub_MRNAPP_HOME@
+export MRNETAPP_HOME=@sub_MRNAPP_HOME@
+export MRNET_HOME=@sub_MRNET_HOME@
+export MRNET_COMM_PATH=${MRNET_HOME}/bin/mrnet_commnode
+export MRNET_TOPGEN=${MRNET_HOME}/bin/mrnet_topgen
+export XPLAT_RESOLVE_HOSTS=0
+
